hphp/hack/test/typecheck/is_expression/talias3.php.exp
File "talias3.php", line 7, characters 13-15:
The "is" operator should not be used with a type with generics, because generics are erased at runtime (Typing[4199])
